[package]
name = "kasm"
version = "0.10.20"
authors = ["Luke Newcomb <newcomb.luke@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "The Kerbal Compiler Collection assembler for kOS"
readme = "README.md"
homepage = "https://github.com/newcomb-luke/kOS-KASM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
kerbalobjects = "3.1.10"
logos = "0.12.0"
termcolor = "1.1"
atty = "0.2.14"
pathdiff = "0.2.1"
